tests/sema/fail/v5_fail_slice_missing_end.ep
# COMPILE_FAIL: slice requires explicit start and end
fun main(): void {
    let s = "hello"
    let x = s[1:]
}
